<resources>
    <string name="app_name">sunmoon</string>

    <string name="select_default_page">처음화면을 고르세요</string>
    <string name="save">저장</string>


    <string name="no">순</string>
    <string name="asan_campus_start">아산캠퍼스\n(출발)</string>
    <string name="asan_station">아산역\n(KTX)</string>
    <string name="cheonan_station">천안역</string>
    <string name="h_spa">하이렉스파\n건너편</string>
    <string name="yongam_vil">용암마을</string>
    <string name="asan_campus_arrival">아산캠퍼스\n(도착)</string>
    <string name="train_weekday">기차역 평일</string>
    <string name="train_saturday">기차역 토요일</string>
    <string name="train_sunday">기차역 일요일</string>
    <string name="c_terminal_weekday">천안터미널 평일</string>
    <string name="c_terminal_saturday">천안터미널 토요일</string>
    <string name="c_terminal_sunday">천안터미널 일요일</string>
    <string name="c_terminal">천안터미널</string>
    <string name="hanjeon">한국전력</string>
    <string name="homemart">홈마트\n에브리데이</string>
    <string name="baebang">배방지역</string>
    <string name="o_terminal">온양터미널</string>
    <string name="o_station">온양역</string>
    <string name="setting">설정</string>


    <!--The shuttle schedule has been updated.-->
    <string name="shuttle_schedule_has_been_updated">셔틀시간표를 갱신하였습니다.</string>
    <!--Recently updated.-->
    <string name="recently_updated">최근에 업데이트되었습니다.</string>

</resources>
