<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.shuttle.ShuttleFragment">

    <RelativeLayout
        android:id="@+id/shuttle_rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/shuttle_cardview_train_weekday_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_start"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/asan_station"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/cheonan_station"
                        android:textSize="10sp" />


                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/h_spa"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/yongam_vil"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/asan_station"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_arrival"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/shuttle_cardview_train_weekend_header"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_start"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/asan_station"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/cheonan_station"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/asan_station"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_arrival"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/shuttle_cardview_terminal_weekday_header"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_start"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/c_terminal"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center"
                        android:text="@string/hanjeon"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center"
                        android:text="@string/homemart"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_arrival"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/shuttle_cardview_terminal_weekend_header"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_start"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/c_terminal"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_arrival"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/shuttle_cardview_onyang_weekday_header"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_start"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/baebang"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/o_terminal"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/o_station"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asan_campus_arrival"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shuttle_train_recyclerview_timetable"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shuttle_rl_header" />

</androidx.constraintlayout.widget.ConstraintLayout>

